# WAC

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Unet_RES_Att_models_IV.py  WAC_data_extraction_example.ipynb  convert_to_onnx.py  eo_fetcher.py  eo_utils.py  pyproject.toml  si_prediction.py  utils.py
.github/workflows/: ci.yaml  pre-commit.yaml
ML/: Unet_RES_Att_models_IV.py
ML/Model/: RandomForest_with_CNNFeatures.py
Model/: RandomForest_with_CNNFeatures.py
classification/: README.md  config.py  full_processing_pipeline.ipynb  udp_generator.py  utility.py
classification/UDF/: udf_inference.py  udf_lat_lon.py  udf_lon_lat.py  udf_normalise.py  udf_normalisecomcrop.py
classification/geospatial_pipeline/: band_normalization.py  commodities_map.py  config.py  input_cube_loader.py  onnx_inference.py  pipeline_builder.py  tree_cover_density.py  udp_generator.py
in_situ/: status_in_situ_rdm.ipynb
job_manager/: AOI_ESA_WAC_HND.gpkg  job_database_backup.parquet  job_manager.py  sandbox.ipynb
model_conversion/: model_metadata_compositing.py  model_stac_building.py  onnx_conversion.py
model_training/: CommCrop_Prediction_AccessingData_from_GEE.py  README.md  convert_to_onnx.py  requirements.txt
model_training/ML/: Unet_RES_Att_models_IV.py  si_prediction.py
notebooks/in_situ/: status_in_situ_rdm.ipynb
notebooks/processing_pipeline/: full_processing_pipeline.ipynb  utility.py
openEO/inference/: comcrop_onnx_hv.ipynb  extractor.py  inference.py  normalization.py
openEO/model_conversion/: onnx_conversion.py
production/: WAC_extraction.ipynb  WAC_extraction.py  community_example_job_tracker.csv  example_job_tracker.csv  extraction_pipeline.py  job_tracker.csv
production/AGERA5/: pipeline.py
production/DEM/: pipeline.py
production/eo_extractors/: extractor.py
production/helper/: BAP_utils.py  eo_utils.py  jobmanager_utils.py  scl_preprocessing.py
production/job_j-24102149962644bb83398e67b22be120/: job_j-24102149962644bb83398e67b22be120_errors.json
production/job_j-241021b501e4423da0795b1096a689a9/: job_j-241021b501e4423da0795b1096a689a9_errors.json
production/prediction/: base_code example.py  comcrop_onnx.ipynb  extractor.py  (+4 more)
(+150 files in other folders)
