[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts",
  "/bin",
  "/tests",
]

[project]
name = "world_agrocommodities"
version = "0.1.0a1"
authors = [
  { name="Robert Masolele" },
  { name="Hans Vanrompay" },
  { name="Vincent Verelst" },
  { name="Jeroen Degerickx" },
]
description = "World AgroCommodities"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "netcdf4==1.7.3",
    "openeo>=0.45.0",
    "pyproj==3.7.2",
    "rasterio==1.4.3",
    "requests==2.32.5",
    "xarray==2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "pytest>=7.4.0",
]

notebooks = [
    "matplotlib==3.10.7",
    "ipyleaflet==0.20.0",
    "ipywidgets==8.1.7",
    "ipykernel==7.1.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --disable-warnings --capture=no"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: slower tests hitting external systems"
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E"]
ignore = [
  "E501",  # Ignore "line-too-long" issues, let black handle that.
  "E402",  # Ignore "module level import not at top of file" issues.
]

[tool.ruff.format]
indent-style = "space"
